Various zone editor fixes (#54)
* Fix: edits enabled for different layouts.

* ZoneEditor: label now shows the innerHeight of the zones.

* ZoneEditor: fix "cancel editing" not forgetting changes.

* Introduce minimum width/height for zones.

* More fixes for zone resize

* Fix warning.

* ZoneAnchor: improve styling.

* Fix ZonePreview not showing on mouseover

* WIP: Have a root container instead of putting everything in uiGroup

* Fix shadow buttons after split.

* Merge fix

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -10,16 +10,18 @@
 
 .size-button
 {
-    background-color: #888;
-    color: aqua;
-    border-radius: 0px;
+    background-color: rgba(12, 16, 194, 1.0);
+    color: #fff;
+    border-radius: 36px;
+    width: 36px;
+    height: 36px;
 }
 
 .tab-button
 {
     background-color: #222;
     color: #ccc;
-    border-radius:2px;
+    border-radius:4px;
     border: 2px #111;
     padding-left: 12px;
     padding-right: 12px;
@@ -34,6 +36,7 @@
 {
     background-color: rgba(197, 198, 255, 0.4);
     border: solid 1px rgba(220, 220, 255, 0.6);
+    border-radius: 4px;
 }
 
 .grid-preview:activate
